tests/incremental_cycle_break/incremental_cycle_break.exp

Initial status:
No errors!

Clear A.js:
Error --------------------------------------------------------------------------------------------------------- B.js:5:9

Cannot resolve module `A`. [cannot-resolve-module]

   5| require('A');
              ^^^



Found 1 error

Restore A.js:
No errors!

Done!
